<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yyrz.doctor.ui.assessmentUI.FluentLanguge">

    <TextView
        android:id="@+id/fluentLanguage_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fluent_language_label1"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fluentLanguage_checkBox1"
        app:layout_constraintStart_toStartOf="@+id/fluentLanguage_checkBox1"
        app:layout_constraintTop_toBottomOf="@+id/fluentLanguage_guideline1" />

    <TextView
        android:id="@+id/fluentLanguage_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fluent_language_label2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fluentLanguage_radioGroup"
        app:layout_constraintStart_toStartOf="@+id/fluentLanguage_radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/fluentLanguage_checkBox1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fluentLanguage_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fluentLanguage_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <RadioGroup
        android:id="@+id/fluentLanguage_radioGroup"
        android:layout_width="261dp"
        android:layout_height="34dp"
        android:checkedButton="@id/fluentLanguage_radioButton1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fluentLanguage_editText"
        app:layout_constraintStart_toStartOf="@+id/fluentLanguage_editText"
        app:layout_constraintTop_toBottomOf="@+id/fluentLanguage_textView2">

        <RadioButton
            android:id="@+id/fluentLanguage_radioButton1"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/grade_0" />

        <Space
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/fluentLanguage_radioButton2"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:text="@string/grade_1" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/fluentLanguage_checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="0"
        android:text="@string/fluent_language_label3"
        app:layout_constraintBottom_toTopOf="@+id/fluentLanguage_textView2"
        app:layout_constraintStart_toStartOf="@+id/fluentLanguage_textView2"
        app:layout_constraintTop_toBottomOf="@+id/fluentLanguage_textView1" />

    <CheckBox
        android:id="@+id/fluentLanguage_checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="1"
        android:text="@string/fluent_language_label4"
        app:layout_constraintBottom_toBottomOf="@+id/fluentLanguage_checkBox1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fluentLanguage_checkBox1"
        app:layout_constraintTop_toTopOf="@+id/fluentLanguage_checkBox1" />

    <EditText
        android:id="@+id/fluentLanguage_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/fluent_language_label5"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/fluentLanguage_guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/fluentLanguage_radioGroup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <ImageView
        android:id="@+id/fluentLanguage_imageView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/voice"
        app:layout_constraintBottom_toBottomOf="@+id/fluentLanguage_checkBox1"
        app:layout_constraintStart_toEndOf="@+id/fluentLanguage_checkBox1"
        app:layout_constraintTop_toTopOf="@+id/fluentLanguage_checkBox1" />

    <ImageView
        android:id="@+id/fluentLanguage_imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/voice"
        app:layout_constraintBottom_toBottomOf="@+id/fluentLanguage_checkBox2"
        app:layout_constraintStart_toEndOf="@+id/fluentLanguage_checkBox2"
        app:layout_constraintTop_toTopOf="@+id/fluentLanguage_checkBox2" />

    <ImageView
        android:id="@+id/fluentLanguage_imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:src="@drawable/voice"
        app:layout_constraintBottom_toBottomOf="@+id/fluentLanguage_textView2"
        app:layout_constraintStart_toEndOf="@+id/fluentLanguage_textView2"
        app:layout_constraintTop_toTopOf="@+id/fluentLanguage_textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
